  * d/tests/control: remove dependency on net-tools (introduced in 2.0.42-2)
    as it did not fix the test failure
  * fix spelling of test filename munin-master/01.master-components.t
  * add more build dependencies for upstream tests (test failures are
    currently tolerated by upstream)
  * tests: do not rely on /var/cache/munin/www/localdomain to be created in
    CGI mode

 -- Lars Kruse <devel@sumpfralle.de>  Wed, 24 Oct 2018 00:37:01 +0200

munin (2.0.42-2) unstable; urgency=medium

  * d/tests/control: Add dependency on net-tools for the plugin tests of
    munin-node running with systemd. Thanks to Ivo De Decker for the analysis.
    (Closes: #910684)
  * d/control: Use the new debhelper-compat(=11) notation and drop d/compat.

 -- Holger Levsen <holger@debian.org>  Thu, 18 Oct 2018 14:12:57 +0200

munin (2.0.42-1) unstable; urgency=low

  [ Lars Kruse ]
  * New upstream version 2.0.42.
  * New upstream version 2.0.41, Closes: #717287
  * New upstream version 2.0.38, fixing various issues, including bugs in:
    - postfix_mailstats: incorrect delivered message count (Closes: #675318)
    - quota_usage_: documentation deviates from behaviour (Closes: #730030)
    - munin outputs malformed XHTML (Closes: #732149)
    - iostat_ios: plugin should support configuration (Closes: #767018)
    - mysql_innodb: improve version detection (Closes: #901729)
  * mysql plugins: switch the "mysqluser" from "debian-sys-maint" to "root"
    in the plugin configuration.
    See munin-node.NEWS entry for details.
    (Closes: #862238, #864845)
  * fix trivial spelling mistakes below debian/ (thanks "codespell")
  * explicitly fail on erroneous OSTYPE detection
    (this may help with analyzing #839233)
  * use /run/munin/ instead of /var/run/munin/ (Closes: #790009)
  * munin-node.service: create /var/log/munin, if missing
    (Closes: #808988, Thanks Alejandro Suarez)
  * remove outdated cached files (Closes: #700298)